# dahdi-tools

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.legacy  README  configure.ac  dahdi-bash-completion  dahdi-tools-2.4.1-summary.html  dahdi-tools-2.4.1-summary.txt  dahdi.init  dahdi_cfg.c  dahdi_maint.c  dahdi_pcap.c  dahdi_span_assignments  dahdi_span_types  dahdi_test.c  dahdi_waitfor_span_assignments  hdlcgen.c  hdlcstress.c  modules.sample  patgen.c  patlooptest.c  pattest.c  system.conf.sample  tonezone.c  version.c.in  zonedata.c
build_tools/: make_dist  make_version
doc/: Makefile.am  dahdi_cfg.8  dahdi_span_types.8  dahdi_tool.8  fxotune.8
hotplug/: Makefile.am  dahdi_auto_assign_compat  dahdi_handle_device  dahdi_span_config
hotplug/handle_device.d/: 10-span-types  20-span-assignments  30-xpp-sync
ppp/: Makefile.am  Makefile.legacy
xpp/: 50-dahdi.conf  Makefile  Makefile.am  Makefile.legacy  README.Astribank  astribank.c  astribank.h  astribank_allow.8  astribank_allow.c  astribank_hexload.8  astribank_hexload.c  astribank_hook  astribank_is_starting.8  astribank_is_starting.c  astribank_license.c  astribank_license.h  astribank_tool.c  dahdi_genconf  dahdi_registration  echo_loader.c  echo_loader.h  fpga_load.c  hexfile.c  hexfile.h  mpptalk.c  mpptalk.h  parse_span_specs.c  parse_span_specs.h  pic_loader.c  pic_loader.h  waitfor_xpds  xpp_fxloader  xpp_sync
xpp/oct612x/: Makefile.am
xpp/perl_modules/: Makefile.am
xpp/perl_modules/Dahdi/: Span.pm
xpp/perl_modules/Dahdi/Hardware/: PCI.pm  USB.pm
xpp/perl_modules/Dahdi/Xpp/: Xbus.pm
xpp/xtalk/: Makefile.am  debug.c  xlist.c  xlist_test.c  xtalk-xusb.c  xtalk_base.c  xtalk_base.h  xtalk_raw.c  xtalk_raw_test.c  xtalk_send.8  xtalk_send.c  xtalk_sync.c  xtalk_test.c  xusb.c  xusb_common.c  xusb_common.h  xusb_libusb.c  xusb_libusbx.c  xusb_test.c  xusb_test_bypath.c
xpp/xtalk/include/xtalk/: api_defs.h  debug.h  firmware_defs.h  proto.h  proto_raw.h  proto_sync.h  xlist.h  xtalk_iface.h  xusb.h  xusb_iface.h
