man_MANS	= \
	dahdi_cfg.8 \
	dahdi_maint.8 \
	dahdi_monitor.8 \
	dahdi_scan.8 \
	dahdi_span_assignments.8 \
	dahdi_span_types.8 \
	dahdi_test.8 \
	dahdi_tool.8 \
	dahdi_waitfor_span_assignments.8 \
	fxotune.8

noinst_MANS	= \
	dahdi_diag.8 \
	fxstest.8 \
	patgen.8 \
	pattest.8

EXTRA_DIST	= $(man_MANS) $(noinst_MANS)
