perllibdir		= @perllibdir@
nobase_perllib_DATA	= \
	Dahdi.pm \
	Dahdi/Hardware.pm \
	Dahdi/Xpp/Line.pm \
	Dahdi/Xpp/Xbus.pm \
	Dahdi/Xpp/Xpd.pm \
	Dahdi/Xpp/Mpp.pm \
	Dahdi/Span.pm \
	Dahdi/Utils.pm \
	Dahdi/Chans.pm \
	Dahdi/Xpp.pm \
	Dahdi/Config/Params.pm \
	Dahdi/Config/Gen/Xpporder.pm \
	Dahdi/Config/Gen/Spantypes.pm \
	Dahdi/Config/Gen/Modules.pm \
	Dahdi/Config/Gen/Users.pm \
	Dahdi/Config/Gen/Freepbxdb.pm \
	Dahdi/Config/Gen/Unicall.pm \
	Dahdi/Config/Gen/Chandahdi.pm \
	Dahdi/Config/Gen/Assignedspans.pm \
	Dahdi/Config/Gen/System.pm \
	Dahdi/Config/Gen.pm \
	Dahdi/Hardware/USB.pm \
	Dahdi/Hardware/PCI.pm

EXTRA_DIST	= $(nobase_perllib_DATA)
